--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,108 @@
 aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiohttp-retry==2.9.1
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.10.0
 asyncpg==0.30.0
+attrs==25.3.0
+base58==2.1.1
+bitarray==3.7.1
 braintree==4.38.0
+cdp-sdk==1.33.0
 certifi==2025.8.3
+cffi==2.0.0
 charset-normalizer==3.4.3
+ckzg==2.1.4
 click==8.2.1
 colorama==0.4.6
+construct==2.10.68
+construct-typing==0.6.2
 contourpy==1.3.3
+cryptography==46.0.1
 cycler==0.12.1
+cytoolz==1.0.1
+dnspython==2.8.0
+ecdsa==0.19.1
+email-validator==2.3.0
+eth-account==0.13.7
+eth-hash==0.7.1
+eth-keyfile==0.8.1
+eth-keys==0.7.0
+eth-rlp==2.2.0
+eth-typing==5.2.1
+eth-utils==5.3.1
+eth_abi==5.2.0
 fastapi==0.116.1
 fonttools==4.59.1
+frozenlist==1.7.0
+greenlet==3.2.4
 h11==0.16.0
+hexbytes==1.3.1
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
 Jinja2==3.1.6
+jsonalias==0.1.1
 kiwisolver==1.4.9
 MarkupSafe==3.0.2
 matplotlib==3.10.5
+multidict==6.6.4
 narwhals==2.2.0
+nest-asyncio==1.6.0
 numpy==2.3.2
 packaging==25.0
 pandas==2.3.2
+parsimonious==0.10.0
+passlib==1.7.4
+paypalrestsdk==1.13.1
 pillow==11.3.0
 plotly==6.3.0
 pluggy==1.6.0
 prometheus-fastapi-instrumentator==7.1.0
 prometheus_client==0.22.1
+propcache==0.3.2
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
 pycoingecko==3.2.0
+pycparser==2.23
+pycryptodome==3.23.0
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
+PyJWT==2.10.1
+pyOpenSSL==25.3.0
 pyparsing==3.2.3
 pytest==8.4.1
 pytest-asyncio==1.1.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+python-jose==3.5.0
 python-multipart==0.0.20
 pytz==2025.2
+pyunormalize==16.0.0
+pywin32==311
+regex==2025.9.18
 requests==2.32.5
+rlp==4.1.0
+rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
+solana==0.36.9
+solders==0.26.0
+SQLAlchemy==2.0.43
 starlette==0.47.3
 tenacity==9.1.2
+toolz==1.0.0
+types-requests==2.32.4.20250913
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
-urllib3==2.5.0
+urllib3==2.3.0
 uvicorn==0.35.0
-paypalrestsdk==1.13.1
-aiohttp==3.12.15
-python-jose
-sqlalchemy
-passlib
-pydantic[email]
+web3==7.10.0
+websockets==15.0.1
+yarl==1.20.1
